--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Student Login</title>
+    <title></title>
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
 
     <!-- Favicons -->
