--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,6 @@
       
     <!-- Template Main JS File -->
     <script src="%PUBLIC_URL%/assets/js/main.js"></script>
-    
+    <script>console.log(`%PUBLIC_URL%`)</script>
   </body>
 </html>
